tests/functional/lang/eval-fail-path-slash.err.exp
error: path has a trailing slash
       at /pwd/lang/eval-fail-path-slash.bsd:6:12:
            5| # and https://basedlinux.org/bsd-dev/2016-June/020829.html
            6| /bsd/store/
             |            ^
            7|
